Table users [note: 'Пользователи'] {
  id int [pk, note: 'ИД']
  name varchar(255) [note: 'Имя']
  nickname varchar(255) [note: 'Никнейм', unique]
  surname varchar(255) [note: 'Фамилия']
  email varchar(255) [note: 'Email', unique]
  description text [note: 'Описание профиля', null]
  passwordHash varchar(255) [note: 'Хэш пароля']
  isArchive bool [note: Удален?]
  avatarId int [ref: > files.id, null]
  createTime datetime [note: 'Создан']
  updateTime datetime [note: 'Обновлен']
}

Table posts [note: 'Посты'] {
  id int [pk, note: 'ИД']
  authorId int [note: 'ИД автора', ref: > users.id]
  title varchar(255) [note: 'Заголовок']
  body text [note: 'Текст поста']
  imageId int [ref: > files.id, null]
  createTime datetime [note: 'Создан']
  updateTime datetime [note: 'Обновлен']
}

Table tags [note: 'Тэги'] {
  id int [pk, note: 'ИД']
  title varchar(255) [note: 'Название', unique]
}

Table post_tags [note: 'Тэги для постов'] {
  id int [pk, note: 'ИД']
  postId int [note: 'ИД поста', ref: > posts.id]
  tagId int [note: 'ИД тега', ref: > tags.id]
  indexes {
    (postId, tagId) [unique]
  }
}

Table likes [note: 'Лайки'] {
  id int [pk, note: 'ИД']
  postId int [note: 'ИД поста', ref: > posts.id]
  userId int [note: 'ИД пользователя', ref: > users.id]
  createTime datetime [note: 'Дата лайка']
  indexes {
    (postId, userId) [unique]
  }
}

Table comments [note: 'Комментарии'] {
  id int [pk, note: 'ИД']
  postId int [note: 'ИД поста', ref: > posts.id]
  userId int [note: 'ИД пользователя', ref: > users.id]
  parentCommentId int [note: 'ИД родительского комментария', ref: > comments.id, null]
  text text [note: 'Комментарий']
  createTime datetime [note: 'Создан']
  updateTime datetime [note: 'Обновлен']
}


Table feeds [note: 'Подписки'] {
  id int [pk, note: 'ИД']
  followerId int [note: 'Идентификатор подписчика (того, кто подписывается)', ref: > users.id]
  followedId int [note: 'Id пользователя, на которого подписываются', ref: > users.id]
  createTime datetime [note: 'Дата лайка']
  indexes {
    (followerId, followedId) [unique]
  }
}

Table files {
  id int [pk]
  uid varchar(255) [unique]
  title varchar(255)
  storageName varchar(255)
  fileName varchar(255)
  fileSize int
  fileMimeType varchar(100)
  folder varchar(255)
  createTime datetime
}